samples/_failures_safe/1761400016_253b80_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_962d8d89.c: In function ‘main’:
./samples/SAFE/__tmp_962d8d89.c:180:13: error: expected ‘;’ at end of input
  180 |     return 0
      |             ^
      |             ;
./samples/SAFE/__tmp_962d8d89.c:180:5: error: expected declaration or statement at end of input
  180 |     return 0
      |     ^~~~~~
